# mailledger

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json  settings.md
.claude/commands/: build.md  check.md  fix.md  test.md
.claude/hooks/: post-edit.sh  pre-bash.sh  pre-edit.sh  prompt-submit.sh  session-stop.sh
.claude/rules/: iced-architecture.md  no-commit.md  rust-quality.md
.claude/shared/: README.md
.claude/shared/patterns/: async-tokio.md  builder.md  elm-architecture.md  error-handling.md  newtype.md  testing.md  type-state.md
.claude/shared/snippets/: error-type.rs  iced-app.rs  lib-crate.rs
crates/mailledger/: Cargo.toml  README.md
crates/mailledger-core/: Cargo.toml  README.md
crates/mailledger-core/examples/: outlook_device_flow.rs
crates/mailledger-core/src/: error.rs  lib.rs
crates/mailledger-core/src/account/: credentials.rs  mod.rs  model.rs  repository.rs  validation.rs
crates/mailledger-core/src/cache/: mod.rs  model.rs  repository.rs
crates/mailledger-core/src/contacts/: mod.rs  model.rs  repository.rs
crates/mailledger-core/src/service/: mail.rs  mod.rs  smtp.rs
crates/mailledger-core/src/snooze/: mod.rs  model.rs  repository.rs
crates/mailledger-core/src/triage/: mod.rs  model.rs  repository.rs
crates/mailledger-imap/: Cargo.toml  README.md
crates/mailledger-imap/examples/: outlook_login.rs
crates/mailledger-imap/src/: error.rs  fetch.rs  handler.rs  lib.rs  pipeline.rs  qresync.rs  quirks.rs  stream_fetch.rs  time.rs
crates/mailledger-imap/src/command/: mod.rs  serialize.rs  tag_generator.rs  types.rs
crates/mailledger-imap/src/connection/: config.rs  framed.rs  idle.rs  mod.rs  session.rs  stream.rs
crates/mailledger-imap/src/connection/client/: authenticated.rs  mod.rs  not_authenticated.rs  selected.rs  states.rs
crates/mailledger-imap/src/parser/: mod.rs
crates/mailledger-imap/src/parser/lexer/: mod.rs  token.rs
crates/mailledger-imap/src/parser/response/: fetch.rs  helpers.rs  mod.rs  types.rs
crates/mailledger-imap/src/protocol/: mod.rs  state.rs  transmit.rs
crates/mailledger-imap/src/types/: capability.rs  flags.rs  identifiers.rs  mailbox.rs  mod.rs  response_code.rs  sequence.rs
crates/mailledger-imap/tests/: integration.rs
crates/mailledger-mime/: Cargo.toml  README.md
crates/mailledger-mime/src/: content_type.rs  encoding.rs  error.rs  header.rs  lib.rs  message.rs
crates/mailledger-oauth/: Cargo.toml  README.md
crates/mailledger-oauth/examples/: outlook_oauth2.rs
crates/mailledger-oauth/src/: error.rs  lib.rs  sasl.rs
crates/mailledger-oauth/src/flow/: code.rs  device.rs  mod.rs  pkce.rs
crates/mailledger-oauth/src/provider/: mod.rs
crates/mailledger-oauth/src/token/: mod.rs
crates/mailledger-smtp/: Cargo.toml  README.md
crates/mailledger-smtp/src/: error.rs  lib.rs
crates/mailledger-smtp/src/command/: mod.rs
crates/mailledger-smtp/src/connection/: client.rs  mod.rs  stream.rs
crates/mailledger-smtp/src/parser/: mod.rs
crates/mailledger-smtp/src/types/: address.rs  extension.rs  mod.rs  reply.rs
crates/mailledger/src/: main.rs  message.rs
crates/mailledger/src/model/: account_setup.rs  compose.rs  folder.rs  inline_image.rs  message.rs  mod.rs  settings.rs  thread.rs
crates/mailledger/src/style/: mod.rs  theme.rs
crates/mailledger/src/style/widgets/: buttons.rs  containers.rs  inputs.rs  mod.rs  palette.rs  shadows.rs
crates/mailledger/src/view/: account_setup.rs  compose.rs  header.rs  message_list.rs  message_view.rs  mod.rs  pane_divider.rs  screener.rs  settings.rs  sidebar.rs
docs/: OAUTH2_DEPLOYMENT.md  OAUTH2_IMPLEMENTATION.md  OAUTH2_SUMMARY.md  OUTLOOK_SETUP_GUIDE.md
