[workspace]
resolver = "2"
members = [
    "crates/mailledger",
    "crates/mailledger-imap",
    "crates/mailledger-smtp",
    "crates/mailledger-oauth",
    "crates/mailledger-mime",
    "crates/mailledger-core",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
authors = ["mqasimca"]
rust-version = "1.88"
repository = "https://github.com/mqasimca/mailledger"
homepage = "https://github.com/mqasimca/mailledger"
documentation = "https://docs.rs/mailledger"
readme = "README.md"
keywords = ["email", "imap", "smtp", "mail", "client"]
categories = ["email", "network-programming"]

[workspace.dependencies]
# Internal crates (version required for crates.io publishing)
mailledger-imap = { path = "crates/mailledger-imap", version = "0.0.2" }
mailledger-mime = { path = "crates/mailledger-mime", version = "0.0.2" }
mailledger-smtp = { path = "crates/mailledger-smtp", version = "0.0.2" }
mailledger-oauth = { path = "crates/mailledger-oauth", version = "0.0.2" }
mailledger-core = { path = "crates/mailledger-core", version = "0.0.2" }

# Async runtime
tokio = { version = "1", features = ["full"] }
bytes = "1"

# TLS (pure Rust)
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1"

# GUI - Wayland only on Linux (no X11)
iced = { version = "0.14", default-features = false, features = [
    "wgpu",
    "tiny-skia",
    "wayland",
    "tokio",
    "web-colors",
    "crisp",
    "image",
    "markdown",
    "highlighter",
] }

# HTML to Markdown conversion
htmd = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
opener = "0.7"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Directories
dirs = "6"

# Desktop notifications
notify-rust = "4"

# Secure credential storage
# On Linux: uses Secret Service (GNOME Keyring, KWallet via D-Bus)
# crypto-rust provides pure Rust encryption for Secret Service
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

# Testing
proptest = "1"
tokio-test = "0.4"

# Optimization profiles
[profile.release]
lto = "thin"           # Link-time optimization for better performance
codegen-units = 1      # Better optimization at the cost of compile time
strip = true           # Strip symbols for smaller binary size
opt-level = 3          # Maximum optimization

# Fast development builds with some optimizations
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
strip = false
opt-level = 2

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
